--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,2 +1,15 @@
 <!--pages/classic/classic.wxml-->
-<text>pages/classic/classic.wxml</text>
+<view class="container">
+    <view class="chunk color1">
+        1
+    </view>
+    <view class="chunk color2">
+        2
+    </view>
+    <view class="chunk color3">
+        3
+    </view>
+</view>
+
+
+    
