style:like组件样式处理

--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,15 +1,5 @@
 <!--pages/classic/classic.wxml-->
-<view class="container">
-    <view class="chunk color1">
-        1
-    </view>
-    <view class="chunk color2">
-        2
-    </view>
-    <view class="chunk color3">
-        3
-    </view>
-</view>
+<v-like />
 
 
     
