--- a/components/like/index.wxml
+++ b/components/like/index.wxml
@@ -1,5 +1,5 @@
 <!--components/like/index.wxml-->
 <view class="container" bind:tap="handleLike">
-    <image class="" src="images/like.png" />
-    <text>9</text>
+    <image class="" src="{{check ? checkImg : noCheckImg}}" />
+    <text>{{count}}</text>
 </view>
