--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,5 +1,5 @@
 <!--pages/classic/classic.wxml-->
-<v-like check="{{check}}" count="{{count}}" />
+<v-like bind:like="handleLike" check="{{check}}" count="{{count}}" />
 <v-movie content="{{content}}" image="{{image}}" />
 
 
