--- a/pages/classic/classic.wxss
+++ b/pages/classic/classic.wxss
@@ -1,5 +1,12 @@
 /* pages/classic/classic.wxss */
+.container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     height: 100rpx;
@@ -14,4 +21,8 @@
 }
 .like {
     margin-top: 6rpx;
+}
+.navi {
+    position: absolute;
+    bottom: 40rpx;
 }
