--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,9 +1,11 @@
 <!--pages/classic/classic.wxml-->
-<view class="header">
-    <v-epsoide class="epsoide" index="{{index}}" />
-    <v-like class="like" bind:like="handleLike" check="{{check}}" count="{{count}}" />
+<view class="container">
+    <view class="header">
+        <v-epsoide class="epsoide" index="{{index}}" />
+        <v-like class="like" bind:like="handleLike" check="{{check}}" count="{{count}}" />
+    </view>
+    <v-movie content="{{content}}" image="{{image}}" />
+    <v-navi class="navi" title="{{title}}" latest="{{latest}}" first="{{first}}" />
 </view>
-<v-movie content="{{content}}" image="{{image}}" />
-
 
     
