feat:storage存取最新期刊号

--- a/components/classic/essay/index.wxml
+++ b/components/classic/essay/index.wxml
@@ -1,2 +1,6 @@
 <!--components/classic/essay/index.wxml-->
-<text>components/classic/essay/index.wxml</text>
+<view class="classic-container">
+    <image class="classic-img" src="{{image}}" />   
+    <image class="tag" src="images/essay@tag.png" />
+    <text class="content">{{content}}</text>
+</view>
