--- a/components/classic/movie/index.wxss
+++ b/components/classic/movie/index.wxss
@@ -1,22 +1,2 @@
 /* components/classic/movie/index.wxss */
-.classic-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.classic-img {
-    width: 750rpx;
-    height: 500rpx;
-}
-.tag {
-    width: 46rpx;
-    height: 142rpx;
-    position: relative;
-    bottom: 58rpx;
-    right: 310rpx;
-}
-.content {
-    font-size: 36rpx;
-    max-width: 550rpx;
-    display: block;
-}
+@import '../common.wxss';
