--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -4,7 +4,9 @@
         <v-epsoide class="epsoide" index="{{index}}" />
         <v-like class="like" bind:like="handleLike" check="{{check}}" count="{{count}}" />
     </view>
-    <v-movie content="{{content}}" image="{{image}}" />
+    <v-movie wx:if="{{type === 100}}" content="{{content}}" image="{{image}}" />
+    <v-music wx:if="{{type === 200}}" content="{{content}}" image="{{image}}" />
+    <v-essay wx:if="{{type === 300}}" content="{{content}}" image="{{image}}" />
     <v-navi class="navi" bind:left="handleNext" bind:right="handlePrevious" title="{{title}}" latest="{{latest}}" first="{{first}}" />
 </view>
 
