--- a/components/classic/music/index.wxml
+++ b/components/classic/music/index.wxml
@@ -1,7 +1,7 @@
 <!--components/classic/music/index.wxml-->
 <view class="container">
     <image class="classic-img" src="{{image}}" />
-    <image class="player-img" src="{{pauseSrc}}" />
+    <image class="player-img" bind:tap="handlePlay" src="{{isPlay ? playSrc : pauseSrc}}" />
     <image class="tag" src="images/music@tag.png" />
     <text class="content">{{content}}</text>
 </view>
