feat:图书组件列表渲染

--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,2 +1,4 @@
 <!--pages/book/book.wxml-->
-<text>pages/book/book.wxml</text>
+<block wx:for="{{books}}">
+    <v-book book="{{item}}" />   
+</block>
