--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -10,7 +10,7 @@
         <image class="head-img" src="/images/book/quality.png" />
         <view class="books-container">
             <block wx:for="{{books}}">
-                <v-book book="{{item}}" />
+                <v-book book="{{item}}" class="book" />
             </block>
         </view>
     </view>
