feat:书籍详情页

--- a/components/book/index.wxml
+++ b/components/book/index.wxml
@@ -1,5 +1,5 @@
 <!--components/book/index.wxml-->
-<view class="container">
+<view bind:tap="handleToDetail" class="container">
     <image class="" src="{{book.image}}" ></image>
     <view class="description">
         <text class="title">{{book.title}}</text>
