--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -9,7 +9,7 @@
     <view class="sub-container">
         <image class="head-img" src="/images/book/quality.png" />
         <view class="books-container">
-            <block wx:for="{{books}}">
+            <block wx:key="id" wx:for="{{books}}">
                 <v-book book="{{item}}" class="book" />
             </block>
         </view>
