style:书籍详情样式

--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,2 +1,8 @@
 <!--pages/book-detail/book-detail.wxml-->
-<text>pages/book-detail/book-detail.wxml</text>
+<view class="container">
+    <view class="head">
+        <image src="{{book.image}}" />
+        <text class="title">{{book.title}}</text>
+        <text class="author">{{book.author}}</text>
+    </view>
+</view>
