--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -1,1 +1,28 @@
 /* pages/book-detail/book-detail.wxss */
+.container {
+    background-color: #f5f5f5;
+    width: 100%;
+}
+.head {
+    background-color: #ffffff;
+    padding-top: 40rpx;
+    padding-bottom: 40rpx;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.title {
+    color: #2f2f2f;
+    margin-top: 20rpx;
+    font-size: 38rpx;
+    font-weight: 600;
+}
+.author {
+    font-size: 28rpx;
+    color: #999999;
+}
+.head image {
+    width: 200rpx;
+    height: 300rpx;
+    box-shadow: 2px 2px 3px #e3e3e3;
+}
