--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,4 +1,5 @@
 <!--components/tag/index.wxml-->
 <view class="container">
     <text class="">{{text}}</text>
+    <slot name="num"></slot>
 </view>
