--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -9,7 +9,11 @@
         <text class="headline">短评</text>
         <view class="comment-container">
             <block wx:key="content" wx:for="{{comments}}">
-                <v-tag text="{{item.content}}" />
+                <v-tag text="{{item.content}}">
+                    <text class="num" slot="num">
+                        {{'+'+item.nums}}
+                    </text>
+                </v-tag>
             </block>
         </view>
     </view>
