--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -52,6 +52,12 @@
     margin-right: 15rpx;
     margin-bottom: 10rpx;
 }
+.comment-container > v-tag:nth-child(1) > view {
+    background-color: #fffbdd; 
+}
+.comment-container > v-tag:nth-child(2) > view {
+    background-color: #eefbff; 
+}
 .comment-container .num {
     margin-left: 10rpx;
     font-size: 22rpx;
