--- a/components/tag/index.wxml
+++ b/components/tag/index.wxml
@@ -1,5 +1,5 @@
 <!--components/tag/index.wxml-->
-<view class="container">
+<view class="container tag-class">
     <text class="">{{text}}</text>
     <slot name="num"></slot>
 </view>
