--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -1,4 +1,5 @@
 <!--pages/book-detail/book-detail.wxml-->
+<wxs src="../../util/filter.wxs" module="filter" />
 <view class="container">
     <view class="head">
         <image src="{{book.image}}" />
@@ -16,5 +17,9 @@
                 </v-tag>
             </block>
         </view>
+    </view>
+    <view class="sub-container">
+        <text class="headline">内容简介</text>
+        <text class="content">{{filter.format(book.summary)}}</text>
     </view>
 </view>
