--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -41,6 +41,10 @@
     color: #2f2f2f;
     margin-bottom: 20rpx;
 }
+.content {
+    text-indent: 58rpx;
+    font-weight: 500;
+}
 .comment-container {
     display: flex;
     flex-direction: row;
