--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -74,3 +74,20 @@
 .ex-tag-second {
     background-color: #eefbff !important;
 }
+.detail-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom: 100rpx;
+    font-size: 28rpx;
+    color: #666666;
+}
+.vertical {
+    display: flex;
+    flex-direction: column;
+}
+.description {
+    color: #999999;
+    margin-right: 30rpx;
+}
