feat:短评功能初步实现

--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -42,3 +42,12 @@
         </view>
     </view>
 </view>
+
+<view class="post-container">
+    <view class="post-fake">
+        <text>输入短评</text>
+    </view>
+    <view class="like-container">
+        <v-like bind:like="handleLike" class="like" like="{{likeStatus}}" count="{{likeCount}}" />
+    </view>
+</view>
