--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -125,3 +125,37 @@
     justify-content: space-between;
     align-items: center;
 }
+.posting-container {
+    bottom: 0;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fff;
+    width: 100%;
+    z-index: 999;
+}
+.post-header {
+    width: 100%;
+    border-bottom: 1px solid #f5f5f5;
+    border-top: 1px solid #f5f5f5;
+    height: 100rpx;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.cancel {
+    color: #666;
+}
+.post-header text {
+    padding: 25rpx;
+}
+.post-header>text:first-child {
+    font-size: 28rpx;
+    color: #bbb;
+}
+.posting-container .comment-container {
+    width: 690rpx;
+    padding: 40rpx 30rpx 0 30rpx
+}
