--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -59,7 +59,7 @@
     </view>
     <view class="comment-container">
         <block wx:key="content" wx:for="{{filter.limit(comments,0,3)}}">
-                <v-tag tag-class="{{tool.highLight(index)}}" text="{{item.content}}">
+                <v-tag bind:tapping="handlePost" tag-class="{{tool.highLight(index)}}" text="{{item.content}}">
                     <text class="num" slot="num">
                         {{'+'+item.nums}}
                     </text>
