--- a/pages/book-detail/book-detail.wxml
+++ b/pages/book-detail/book-detail.wxml
@@ -66,7 +66,7 @@
                 </v-tag>
             </block>
     </view>
-    <input type="text" placeholder="短评最多12个字" class="post" />
+    <input type="text" bindconfirm="handlePost" placeholder="短评最多12个字" class="post" />
 </view>
 
 <v-mask wx:if="{{posting}}" />
