--- a/pages/book-detail/book-detail.wxss
+++ b/pages/book-detail/book-detail.wxss
@@ -41,6 +41,9 @@
     color: #2f2f2f;
     margin-bottom: 20rpx;
 }
+.shadow {
+    color: #999;
+}
 .content {
     text-indent: 58rpx;
     font-weight: 500;
