feat:book页面搜索组件（高阶）实现

--- a/pages/book/book.wxml
+++ b/pages/book/book.wxml
@@ -1,7 +1,7 @@
 <!-- pages/book/book.wxml -->
-<view class="container">
+<view class="container" wx:if="{{!searching}}">
     <view class="header">
-        <view class="box">
+        <view class="box" bind:tap="handleSearch">
             <image class="" src="/images/icon/search.png" />
             <text>搜索书籍</text>
         </view>
@@ -15,3 +15,5 @@
         </view>
     </view>
 </view>
+
+<v-search bind:cancel="handleCancel" wx:if="{{searching}}" />
