feat:历史搜索完成

--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -3,10 +3,29 @@
     <view class="header">
         <view class="search-container">
             <image class="icon" src="images/search.png" />
-            <input type="text" placeholder-class="in-bar" class="bar"
+            <input type="text" bindconfirm="handleConfirm" placeholder-class="in-bar" class="bar"
                 placeholder="书籍名" auto-focus="true" />
             <image class="cancel-img" src="images/cancel.png" />
         </view>
         <view class="cancel" bind:tap="handleCancel">取消</view>
+    </view>
+    <view>
+        <view class="history">
+            <view class="title">
+                <view class="chunk"></view>
+                <text>历史搜索</text>
+            </view>            
+            <view class="tags">
+                <block wx:for="{{historyWords}}">
+                    <v-tag text="{{item}}" />
+                </block>
+            </view>
+        </view>
+        <view class="history hot-search">
+            <view class="title">
+                <view class="chunk"></view>
+                <text>热门搜索</text>
+            </view>
+        </view>
     </view>
 </view>
