--- a/components/search/index.wxss
+++ b/components/search/index.wxss
@@ -117,7 +117,7 @@
     width: 630rpx;
   }
   
-  .tags tag-cmp {
+  .tags v-tag {
     margin-right: 10px;
     margin-bottom: 10px;
     /* padding-bottom: 10px; *//* margin-right:6px; */
