feat:热门搜索完成

--- a/components/search/index.wxml
+++ b/components/search/index.wxml
@@ -26,6 +26,11 @@
                 <view class="chunk"></view>
                 <text>热门搜索</text>
             </view>
+            <view class="tags">
+                <block wx:for="{{hotWords}}">
+                    <v-tag text="{{item}}" />
+                </block>
+            </view>
         </view>
     </view>
 </view>
