--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,2 +1,13 @@
 <!--pages/my/my.wxml-->
-<text>pages/my/my.wxml</text>
+<view class="container">
+    <image class="bg" src="/images/my/my@bg.png"></image>
+    <view class="about-container">
+        <view class="about-us">
+            <image src="/images/my/about.png" />
+            <text class="description">关于我们</text>
+        </view>
+        <view class="about-us">
+            <text class="description">喜欢的书</text>
+        </view>
+    </view>
+</view>
