feat:wx.getUserInfo获取用户信息需要用户先授权

--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -11,4 +11,7 @@
             <text class="description">喜欢的书</text>
         </view>
     </view>
+    <button open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="getUserInfo">
+  获取用户信息
+</button>
 </view>
