feat:完善获取用户信息机制

--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -3,12 +3,20 @@
     <image class="bg" src="/images/my/my@bg.png"></image>
     <!-- <open-data type="userAvatarUrl" class="avatar avatar-position"></open-data> -->
     <v-button
+        wx:if="{{!authorized}}"
         class="avatar-position"
         open-type="getUserInfo"
         bind:getuserinfo="handleGetUserInfo"
     >
         <image class="avatar" slot="img" src="/images/my/my.png" />
     </v-button>
+    <view 
+        wx:if="{{authorized}}"
+        class="avatar-container avatar-position"
+    >
+        <image class="avatar" src="{{userInfo.avatarUrl}}" />
+        <text>{{userInfo.nickName}}</text>
+    </view>
     <view class="about-container">
         <view class="about-us">
             <image src="/images/my/about.png" />
